# python-project-776611

./: Makefile  README.md  db.sqlite3  env.example  pyproject.toml  requirements.txt
.github/workflows/: my_linter.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  constants.py  mixins.py  settings.py  urls.py  utils.py  views.py  wsgi.py
task_manager/constants/: success_messages.py  success_urls.py  templates.py
task_manager/constants/contexts/: common_constant.py  home.py  labels.py  statuses.py  tasks.py  users.py
task_manager/labels/: constants.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: constants.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  constants.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_label.py  0003_alter_task_label.py  0004_alter_task_label.py  0005_rename_label_labeltaskintermediate_labels_and_more.py  0006_rename_labels_labeltaskintermediate_label.py  0007_alter_task_author.py  0008_alter_task_author.py  0009_alter_task_author.py
task_manager/templates/: base.html  delete.html  form.html  index.html  labels.html  statuses.html  task_details.html  tasks.html  users.html
task_manager/templates/users/: user_list.html
task_manager/users/: constans.py  forms.py  models.py  test.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+1 more)
(+1 files in other folders)
